k3s/base/ingresses/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: dev.goodfood.test
      http:
        paths:
          # Back-Office (accès direct)
          - path: /bo
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 80
          
          # API Gateway (Tyk)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tyk-gateway
                port:
                  number: 8080
          
          # Web-App par défaut (plus tard)
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: web-app
          #       port:
          #         number: 80
